--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@ section, summary, time, mark, audio, video {
 	vertical-align: baseline;}
 
 article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+footer, header, hgroup, section {
 	display: block;}
 
 body {
@@ -3103,7 +3103,7 @@ input, select, textarea {
 				border: 0;
 			}
 
-		#header nav {
+		/* #header nav {
 			font-family: Raleway, Helvetica, sans-serif;
 			font-size: 0.8em;
 			font-weight: 700;
@@ -3114,8 +3114,8 @@ input, select, textarea {
 			right: 0.7em;
 			text-transform: uppercase;
 			top: 0.7em;
-		}
-
+		} */
+/* 
 			#header nav a {
 				border: 0;
 				display: inline-block;
@@ -3128,16 +3128,16 @@ input, select, textarea {
 				}
 
 				#header nav a[href="#menu"] {
-					text-decoration: none;
-					-moz-transition: background-color 0.2s ease-in-out;
-					-webkit-transition: background-color 0.2s ease-in-out;
+					text-decoration: none; */
+					/* -moz-transition: background-color 0.2s ease-in-out; */
+					/* -webkit-transition: background-color 0.2s ease-in-out;
 					-ms-transition: background-color 0.2s ease-in-out;
 					transition: background-color 0.2s ease-in-out;
 					border-radius: 5px;
 					box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.125);
 					padding: 0 1.35em;
-				}
-
+				} */
+/* 
 					#header nav a[href="#menu"]:before {
 						-moz-osx-font-smoothing: grayscale;
 						-webkit-font-smoothing: antialiased;
@@ -3202,9 +3202,9 @@ input, select, textarea {
 								background-color: inherit;
 							}
 
-		}
+		} */
 
-		@media screen and (max-width: 480px) {
+		/* @media screen and (max-width: 480px) {
 
 			#header nav a[href="#menu"] {
 				width: 4em;
@@ -3224,7 +3224,7 @@ input, select, textarea {
 					padding-right: 1.25em;
 				}
 
-		}
+		} */
 
 /* Menu */
 
@@ -4154,4 +4154,9 @@ input, select, textarea {
 			padding: 2em 1.5em 0.1em 1.5em ;
 		}
 
+	}
+
+	/* MY ADDITIONS */
+	#four img:hover{
+		transform: scale(1.02);
 	}
